--- a/index.html
+++ b/index.html
@@ -1,339 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Autocrafter Interface</title>
-
-    <style>
-        * {
-            margin: 0; padding: 0; box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Courier New', monospace;
-            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-            color: #00ff88;
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .container { max-width: 1200px; margin: 0 auto; }
-
-        header {
-            text-align: center;
-            padding: 20px;
-            border: 2px solid #00ff88;
-            border-radius: 10px;
-            background: rgba(0,0,0,0.55);
-            margin-bottom: 30px;
-            box-shadow: 0 0 20px rgba(0,255,136,0.4);
-        }
-
-        h1 {
-            font-size: 2.5em;
-            text-shadow: 0 0 10px #00ff88;
-            margin-bottom: 10px;
-        }
-
-        .status { color: #ffaa00; font-size: .9em; }
-
-        .grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-
-        .panel {
-            background: rgba(0,0,0,0.7);
-            border: 2px solid #00ff88;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 0 15px rgba(0,255,136,0.2);
-            animation: fadePanel 0.4s ease-out;
-        }
-
-        @keyframes fadePanel {
-            from { opacity: 0; transform: scale(.95); }
-            to   { opacity: 1; transform: scale(1); }
-        }
-
-        h2 {
-            margin-bottom: 15px;
-            color: #00ff88;
-            text-shadow: 0 0 5px #00ff88;
-        }
-
-        .material-input {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 15px;
-        }
-
-        input[type="text"], input[type="number"] {
-            flex: 1;
-            background: rgba(0,0,0,0.5);
-            border: 1px solid #00ff88;
-            color: #00ff88;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        button {
-            background: linear-gradient(135deg,#00ff88,#00cc6a);
-            border: none;
-            color: #000;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: .3s;
-            font-weight: bold;
-        }
-
-        button:hover {
-            box-shadow: 0 0 15px rgba(0,255,136,0.5);
-            transform: translateY(-2px);
-        }
-
-        .material-item {
-            background: rgba(0,255,136,0.1);
-            padding: 10px;
-            margin-bottom: 8px;
-            border-left: 3px solid #00ff88;
-            border-radius: 6px;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .recommendations {
-            margin-top: 20px;
-            min-height: 200px;
-            padding: 20px;
-            background: rgba(0,0,0,0.7);
-            border: 2px solid #00ff88;
-            border-radius: 10px;
-        }
-
-        .recipe-card {
-            background: rgba(0, 255, 136, 0.12);
-            padding: 15px;
-            border-radius: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #00ff88;
-            animation: fadeIn 0.4s ease-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(18px); }
-            to   { opacity: 1; transform: translateY(0); }
-        }
-
-        .error {
-            padding: 12px;
-            background: rgba(255,80,80,0.15);
-            border: 1px solid #ff4444;
-            border-radius: 8px;
-            color: #ff5555;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Autocrafter Interface with Rune AI</title>
+<style>
+/* SAME STYLES AS BEFORE FOR CONSISTENCY */
+* {margin:0;padding:0;box-sizing:border-box;}
+body {font-family:'Courier New', monospace;background:#0f0c29;color:#00ff88;padding:20px;min-height:100vh;}
+.container {max-width:1200px;margin:0 auto;}
+header {text-align:center;padding:20px;border:2px solid #00ff88;border-radius:10px;background:rgba(0,0,0,0.5);margin-bottom:30px;box-shadow:0 0 20px rgba(0,255,136,0.3);}
+h1 {font-size:2.5em;text-shadow:0 0 10px #00ff88;margin-bottom:10px;}
+.status {color:#ffaa00;font-size:0.9em;}
+.grid {display:grid;grid-template-columns:1fr 1fr;gap:20px;margin-bottom:20px;}
+.panel {background:rgba(0,0,0,0.7);border:2px solid #00ff88;border-radius:10px;padding:20px;box-shadow:0 0 15px rgba(0,255,136,0.2);}
+.panel h2 {color:#00ff88;margin-bottom:15px;text-shadow:0 0 5px #00ff88;font-size:1.5em;}
+.material-input, .rune-input {display:flex;gap:10px;margin-bottom:15px;}
+input[type="text"], input[type="number"], select {flex:1;background:rgba(0,0,0,0.5);border:1px solid #00ff88;color:#00ff88;padding:10px;border-radius:5px;font-family:inherit;}
+input[type="text"]::placeholder {color:#00ff8866;}
+button {background:linear-gradient(135deg,#00ff88,#00cc6a);border:none;color:#000;padding:10px 20px;border-radius:5px;cursor:pointer;font-weight:bold;font-family:inherit;transition:all 0.3s;}
+button:hover {background:linear-gradient(135deg,#00cc6a,#00ff88);box-shadow:0 0 15px rgba(0,255,136,0.5);transform:translateY(-2px);}
+button:disabled {background:#555;color:#888;cursor:not-allowed;transform:none;}
+.material-list {list-style:none;max-height:300px;overflow-y:auto;}
+.material-item {background:rgba(0,255,136,0.1);padding:10px;margin-bottom:8px;border-radius:5px;border-left:3px solid #00ff88;display:flex;justify-content:space-between;align-items:center;}
+.remove-btn {background:#ff4444;padding:5px 10px;font-size:0.8em;}
+.remove-btn:hover {background:#ff6666;}
+.recommendations {background:rgba(0,0,0,0.7);border:2px solid #00ff88;border-radius:10px;padding:20px;margin-top:20px;min-height:200px;}
+.loading {text-align:center;color:#ffaa00;padding:40px;font-size:1.2em;}
+.recipe-card {background:rgba(0,255,136,0.1);border:1px solid #00ff88;border-radius:8px;padding:15px;margin-bottom:15px;animation:fadeIn 0.5s;}
+@keyframes fadeIn {from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
+.error {color:#ff4444;padding:15px;border:1px solid #ff4444;border-radius:5px;margin:10px 0;background:rgba(255,68,68,0.1);}
+@media (max-width:768px){.grid{grid-template-columns:1fr;}h1{font-size:1.8em;}}
+</style>
 </head>
-
 <body>
-    <div class="container">
-        <header>
-            <h1>⚒️ AUTOCRAFTER INTERFACE ⚒️</h1>
-            <div class="status">🟢 GLASSES CONNECTED | BACKPACK ONLINE</div>
-        </header>
+<div class="container">
+<header>
+<h1>⚒️ AUTOCRAFTER INTERFACE ⚒️</h1>
+<div class="status">🟢 GLASSES CONNECTED | BACKPACK ONLINE</div>
+</header>
 
-        <div class="grid">
-            <div class="panel">
-                <h2>📦 Material Inventory</h2>
-                <div class="material-input">
-                    <input type="text" id="materialName" placeholder="Material name..." />
-                    <input type="number" id="materialQty" min="1" value="1" />
-                    <button id="addBtn">Add</button>
-                </div>
-                <ul id="materialList"></ul>
-            </div>
-
-            <div class="panel">
-                <h2>🎯 Quick Actions</h2>
-                <button id="analyzeBtn">🔮 Analyze Materials</button>
-                <button id="clearBtn" style="background:linear-gradient(135deg,#ff4444,#cc0000); margin-top:15px;">
-                    🗑️ Clear Inventory
-                </button>
-            </div>
+<div class="grid">
+    <div class="panel">
+        <h2>📦 Material Inventory</h2>
+        <div class="material-input">
+            <input type="text" id="materialName" placeholder="Material name (e.g., Iron Ingot)">
+            <input type="number" id="materialQty" placeholder="Qty" min="1" value="1">
+            <button onclick="addMaterial()">Add</button>
         </div>
-
-        <div class="panel">
-            <h2>🎯 Custom Craft Request</h2>
-            <div class="material-input">
-                <input type="text" id="customItem" placeholder="Item to craft (Longsword, Potion...)" />
-                <button id="customCraftBtn">🔍 Check Recipe</button>
-            </div>
-        </div>
-
-        <div class="recommendations">
-            <h2>🧙 AI Crafting Recommendations</h2>
-            <div id="recommendationsContent" style="padding:25px; text-align:center; color:#ffaa00;">
-                Add materials & press Analyze.
-            </div>
-        </div>
+        <ul class="material-list" id="materialList"></ul>
     </div>
 
+    <div class="panel">
+        <h2>🎯 Rune System</h2>
+        <div class="rune-input">
+            <select id="runeSelect">
+                <option value="">Select Rune</option>
+                <option value="Fire">Fire</option>
+                <option value="Ice">Ice</option>
+                <option value="Lightning">Lightning</option>
+                <option value="Healing">Healing</option>
+                <option value="Protection">Protection</option>
+            </select>
+            <input type="number" id="diceRoll" placeholder="Your roll">
+            <button onclick="addRune()">Add Rune</button>
+        </div>
+        <ul class="material-list" id="runeList"></ul>
+    </div>
+</div>
+
+<div class="panel">
+<h2>🎯 Custom Crafting Request</h2>
+<div class="material-input">
+<input type="text" id="customItem" placeholder="What do you want to craft? (e.g., Longsword)">
+<button onclick="craftCustomItem()">🔍 Check Recipe</button>
+</div>
+</div>
+
+<div class="recommendations">
+<h2>🧙 AI Crafting Recommendations</h2>
+<div id="recommendationsContent">
+<p style="color:#ffaa00;text-align:center;padding:40px;">
+Add materials and runes to your inventory and click "Analyze & Get Recommendations" to see smart crafting suggestions!
+</p>
+</div>
+<button class="analyze-btn" onclick="analyzeMaterials()">🔮 Analyze & Get Recommendations</button>
+</div>
+</div>
+
 <script>
-/* -----------------------------------------------------------
-   INVENTORY SYSTEM (modular + future-proof)
------------------------------------------------------------ */
-const InventorySystem = {
-    data: [],
+let inventory=[];
+let runes=[];
 
-    add(name, qty) {
-        const existing = this.data.find(m => m.name.toLowerCase() === name.toLowerCase());
-        if (existing) existing.quantity += qty;
-        else this.data.push({ name, quantity: qty });
-        this.render();
-    },
+function addMaterial(){
+    const name=document.getElementById('materialName').value.trim();
+    const qty=parseInt(document.getElementById('materialQty').value);
+    if(!name){alert('Enter material name'); return;}
+    const existing=inventory.find(m=>m.name.toLowerCase()===name.toLowerCase());
+    if(existing){existing.quantity+=qty;}else{inventory.push({name,quantity:qty});}
+    document.getElementById('materialName').value=''; document.getElementById('materialQty').value='1';
+    updateMaterialList();
+}
 
-    remove(index) {
-        this.data.splice(index, 1);
-        this.render();
-    },
+function updateMaterialList(){
+    const list=document.getElementById('materialList');
+    list.innerHTML='';
+    inventory.forEach((m,i)=>{
+        const li=document.createElement('li');
+        li.className='material-item';
+        li.innerHTML=`<span>${m.name} (x${m.quantity})</span><button class="remove-btn" onclick="removeMaterial(${i})">Remove</button>`;
+        list.appendChild(li);
+    });
+}
 
-    clear() {
-        this.data = [];
-        this.render();
-    },
+function removeMaterial(index){inventory.splice(index,1);updateMaterialList();}
 
-    render() {
-        const list = document.getElementById("materialList");
-        list.innerHTML = "";
+function addRune(){
+    const rune=document.getElementById('runeSelect').value;
+    const roll=parseInt(document.getElementById('diceRoll').value);
+    if(!rune||!roll){alert('Select rune and enter roll'); return;}
+    let type='';
+    if(roll<=5) type='Minor';
+    else if(roll<=10) type='Greater';
+    else type='Supreme';
+    runes.push({rune,type,roll});
+    document.getElementById('runeSelect').value=''; document.getElementById('diceRoll').value='';
+    updateRuneList();
+}
 
-        this.data.forEach((mat, i) => {
-            const li = document.createElement("li");
-            li.className = "material-item";
-            li.innerHTML = `
-                <span>${mat.name} (x${mat.quantity})</span>
-                <button onclick="InventorySystem.remove(${i})" 
-                        style="background:#ff4444;padding:4px 10px;">
-                    Remove
-                </button>
+function updateRuneList(){
+    const list=document.getElementById('runeList');
+    list.innerHTML='';
+    runes.forEach((r,i)=>{
+        const li=document.createElement('li');
+        li.className='material-item';
+        li.innerHTML=`<span>${r.rune} - ${r.type} (roll: ${r.roll})</span><button class="remove-btn" onclick="removeRune(${i})">Remove</button>`;
+        list.appendChild(li);
+    });
+}
+
+function removeRune(index){runes.splice(index,1);updateRuneList();}
+
+async function analyzeMaterials(){
+    if(inventory.length===0){alert('Add materials first'); return;}
+    const content=document.getElementById('recommendationsContent');
+    content.innerHTML='<div class="loading">🔮 Consulting the AI Crafter...</div>';
+
+    try{
+        // Simulate AI call for now. Replace with your API call.
+        await new Promise(r=>setTimeout(r,1000));
+
+        content.innerHTML='';
+        inventory.forEach((m)=>{
+            const card=document.createElement('div');
+            card.className='recipe-card';
+
+            // Check runes that apply to this item (example logic)
+            const applicableRunes=runes.map(r=>`${r.rune} (${r.type})`).join(', ')||'None';
+            let power='Normal';
+            if(runes.some(r=>r.type==='Supreme')) power='Overpowered';
+            else if(runes.some(r=>r.type==='Greater')) power='Enhanced';
+
+            card.innerHTML=`
+                <strong>Item:</strong> ${m.name}<br>
+                <strong>Crafting time:</strong> 1 hour<br>
+                <strong>Recommended runes:</strong> ${applicableRunes}<br>
+                <strong>Power level:</strong> ${power}
             `;
-            list.appendChild(li);
+            content.appendChild(card);
         });
+
+    } catch(e){
+        content.innerHTML=`<div class="error">⚠️ Error: ${e.message}</div>`;
     }
-};
+}
 
-/* -----------------------------------------------------------
-   AI ANALYZER (Claude API)
------------------------------------------------------------ */
-const AIAnalyzer = {
-    async analyze() {
-        const inv = InventorySystem.data;
+function craftCustomItem(){
+    const item=document.getElementById('customItem').value.trim();
+    if(!item){alert('Enter item'); return;}
+    document.getElementById('customItem').value='';
+    alert(`Checking recipe for "${item}"... (AI can suggest runes & crafting times)`);
+}
 
-        if (inv.length === 0) {
-            return this.error("Add materials first.");
-        }
-
-        const materialList = inv.map(m => `${m.name} (x${m.quantity})`).join(", ");
-
-        try {
-            const res = await fetch("https://api.anthropic.com/v1/messages", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "x-api-key": "YOUR_API_KEY_HERE",
-                    "anthropic-version": "2023-06-01"
-                },
-                body: JSON.stringify({
-                    model: "claude-3-sonnet-20240229",
-                    max_tokens: 1000,
-                    messages: [{
-                        role: "user",
-                        content: `
-You are a D&D crafting expert analyzing materials.
-
-Materials: ${materialList}
-
-Provide:
-1. 3–5 items craftable using EXACT materials
-2. Craft times (rounds / minutes / hours / days)
-3. Possible substitutions
-4. Format cleanly.
-                        `
-                    }]
-                })
-            });
-
-            const data = await res.json();
-            const text = data.content[0].text;
-            UICraftingRenderer.show(text);
-
-        } catch (err) {
-            this.error(err.message);
-        }
-    },
-
-    error(msg) {
-        document.getElementById("recommendationsContent").innerHTML = `
-            <div class="error">⚠️ ${msg}</div>
-        `;
-    }
-};
-
-/* -----------------------------------------------------------
-   RENDERER (outputs recipes cleanly)
------------------------------------------------------------ */
-const UICraftingRenderer = {
-    show(text) {
-        const content = document.getElementById("recommendationsContent");
-        const parts = text.split(/\n\n+/);
-
-        content.innerHTML = parts.map(section => `
-            <div class="recipe-card">${section.replace(/\n/g, "<br>")}</div>
-        `).join("");
-    }
-};
-
-/* -----------------------------------------------------------
-   SMART GLASSES HOOKS (future expansion)
------------------------------------------------------------ */
-const SmartGlasses = {
-    scanObject(objectName) {
-        console.log("Simulated scan:", objectName);
-        // future: connect to AR system, backpack sensors, rune recognizers
-    }
-};
-
-const BackpackLink = {
-    syncStatus() {
-        console.log("Backpack status synced.");
-    }
-};
-
-/* -----------------------------------------------------------
-   EVENT BINDINGS
------------------------------------------------------------ */
-document.getElementById("addBtn").onclick = () => {
-    const name = document.getElementById("materialName").value.trim();
-    const qty = parseInt(document.getElementById("materialQty").value);
-
-    if (!name) return alert("Enter material name.");
-    InventorySystem.add(name, qty);
-};
-
-document.getElementById("clearBtn").onclick = () => InventorySystem.clear();
-document.getElementById("analyzeBtn").onclick = () => AIAnalyzer.analyze();
-
-document.getElementById("materialName").addEventListener("keypress", e => {
-    if (e.key === "Enter") document.getElementById("addBtn").click();
-});
-
-document.getElementById("materialQty").addEventListener("keypress", e => {
-    if (e.key === "Enter") document.getElementById("addBtn").click();
-});
+// Enter key events
+document.getElementById('materialName').addEventListener('keypress',e=>{if(e.key==='Enter') addMaterial();});
+document.getElementById('materialQty').addEventListener('keypress',e=>{if(e.key==='Enter') addMaterial();});
+document.getElementById('diceRoll').addEventListener('keypress',e=>{if(e.key==='Enter') addRune();});
 </script>
-
 </body>
 </html>
